# logiq

./: Cargo.toml  PKGBUILD  README.md  logik.cabal  syntax.lgk
example/: role-based-authorization.lgk  university-course-prerequisites.lgk
src/: Main.hs  clause.rs  cli.rs  lexer.rs  lib.rs  main.rs  parser.rs  proposition.rs  solver.rs
