[package]
name = "logiq"
version = "0.1.0"
edition = "2024"
description = "A logic SAT solver"
repository = "https://github.com/CoCoSol007/logiq"
authors = ["CoCoSol"]
license = "GPL-3.0"
readme = "README.md"
keywords = [
    "logic",
    "sat-solver",
    "propositional-logic",
    "computational-logic",
    "decision-procedures",
]
categories = [
    "command-line-utilities",
    "development-tools",
    "SAT-solvers",
    "logic",
    "rules-engines",
]
exclude = [
    "/.git", 
    "/target", 
    "/.vscode", 
    "/.idea", 
    "/.github", 
    "/rustfmt.toml", 
    "/.gitignore", 
    "/logo.png", 
    "/LICENSE"
]

[dependencies]
ariadne = "0.5.1"
chumsky = "0.11.1"
clap = { version = "4.5.47", features = ["derive"] }
logos = "0.15.1"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
nursery = { level = "warn", priority = -1 }
